judgehost/judgings/b6d05355b062-0/endpoint-default/6/263/289/compile.out
Compiling failed with exitcode 1, compiler output:
main.cpp: In function 'int main()':
main.cpp:9:8: error: 'i12' was not declared in this scope
     if(i12)
        ^~~
